--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,10 @@
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-orm</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>mysql</groupId>
+  		<artifactId>mysql-connector-java</artifactId>
+  	</dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
@@ -87,6 +91,11 @@
   			<groupId>org.springframework</groupId>
   			<artifactId>spring-orm</artifactId>
   			<version>4.3.3.RELEASE</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>mysql</groupId>
+  			<artifactId>mysql-connector-java</artifactId>
+  			<version>5.1.39</version>
   		</dependency>
   	</dependencies>
   </dependencyManagement>
