--- a/src/resource/properties/database.properties
+++ b/src/resource/properties/database.properties
@@ -1,16 +1,25 @@
 # jdbc - configuration
-jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc\:oracle\:thin\:@127.0.0.1\:1522\:orcl
-jdbc.username=testuser01
+# --- oracle configuration - start
+#jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
+#jdbc.url=jdbc\:oracle\:thin\:@127.0.0.1\:1522\:orcl
+#jdbc.username=testuser01
+#jdbc.password=password
+# --- oracle configuration - end
+# --- mysql configuration - start
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/harikeproject_db
+jdbc.username=root
 jdbc.password=password
+# --- mysql configuration - end
 
 # hibernate - configuration
-hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+#hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=false
 # hibernate.hbm2ddl.auto possible values
 # validate: validate the schema, makes no changes to the database.
 # update: update the schema.
 # create: creates the schema, destroying previous data.
 # create-drop: drop the schema at the end of the session.
-#hibernate.hbm2ddl.auto=update
+#hibernate.hbm2ddl.auto=create-drop
 hibernate.showsql=true
