--- a/src/resource/properties/database.properties
+++ b/src/resource/properties/database.properties
@@ -1,18 +1,18 @@
 # jdbc - configuration
 # --- oracle configuration - start
-jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc\:oracle\:thin\:@127.0.0.1\:1522\:orcl
-jdbc.username=testuser01
-jdbc.password=password
-hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+#jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
+#jdbc.url=jdbc\:oracle\:thin\:@127.0.0.1\:1522\:orcl
+#jdbc.username=testuser01
+#jdbc.password=password
+#hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 # --- oracle configuration - end
 
 # --- mysql configuration - start
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/harikeproject_db
-#jdbc.username=root
-#jdbc.password=password
-#hibernate.dialect=org.hibernate.dialect.MySQLDialect
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/harikeproject_db
+jdbc.username=root
+jdbc.password=password
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # --- mysql configuration - end
 
 # hibernate spsific - configuration
@@ -21,5 +21,5 @@ hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 # update: update the schema.
 # create: creates the schema, destroying previous data.
 # create-drop: drop the schema at the end of the session.
-#hibernate.hbm2ddl.auto=validate
+hibernate.hbm2ddl.auto=create-drop
 hibernate.showsql=true
