--- a/pom.xml
+++ b/pom.xml
@@ -54,14 +54,13 @@
   		<groupId>mysql</groupId>
   		<artifactId>mysql-connector-java</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-webmvc</artifactId>
+  	</dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
-  		<dependency>
-  			<groupId>org.hibernate</groupId>
-  			<artifactId>hibernate-validator</artifactId>
-  			<version>5.1.3.Final</version>
-  		</dependency>
   		<dependency>
   			<groupId>org.springframework</groupId>
   			<artifactId>spring-context</artifactId>
@@ -96,6 +95,11 @@
   			<groupId>junit</groupId>
   			<artifactId>junit</artifactId>
   			<version>4.12</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>org.springframework</groupId>
+  			<artifactId>spring-webmvc</artifactId>
+  			<version>4.3.3.RELEASE</version>
   		</dependency>
   	</dependencies>
   </dependencyManagement>
